--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>jar</packaging>
     <version>0.0.1</version>
     <description>智慧环保可能会用到的模型计算</description>
+    <url>www.allbs.cn</url>
 
     <properties>
         <java.version>1.8</java.version>
@@ -142,6 +143,5 @@
             <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
-
 
 </project>
