--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,13 @@
     <artifactId>allbs-model</artifactId>
     <name>allbs-model</name>
     <packaging>jar</packaging>
-    <version>0.0.1</version>
+    <version>0.0.2</version>
     <description>智慧环保可能会用到的模型计算</description>
     <url>www.allbs.cn</url>
 
     <properties>
         <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <lombok.version>1.18.18</lombok.version>
         <hutool.version>5.5.8</hutool.version>
     </properties>
@@ -39,7 +40,7 @@
         </license>
     </licenses>
     <scm>
-        <tag>V0.0.1</tag>
+        <tag>V0.0.2</tag>
         <url>git@github.com:chenqi92/allbs-model.git</url>
         <connection>scm:git:git@github.com:chenqi92/allbs-model.git</connection>
         <developerConnection>scm:git:git@github.com:chenqi92/allbs-model.git</developerConnection>
@@ -59,10 +60,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.1.0</version>
-                <configuration>
-                    <failOnError>false</failOnError>
-                    <doclint>none</doclint>
-                </configuration>
+<!--                <configuration>-->
+                <!--                    <failOnError>false</failOnError>-->
+                <!--                    <doclint>none</doclint>-->
+                <!--                </configuration>-->
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
