--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,16 @@
     <artifactId>allbs-model</artifactId>
     <name>allbs-model</name>
     <packaging>jar</packaging>
-    <version>0.0.4</version>
+    <version>0.0.5</version>
     <description>智慧环保可能会用到的模型计算</description>
     <url>www.allbs.cn</url>
 
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <lombok.version>1.18.18</lombok.version>
+        <lombok.version>1.18.12</lombok.version>
         <hutool.version>5.5.8</hutool.version>
+        <sl4j.version>1.7.30</sl4j.version>
     </properties>
 
     <dependencies>
@@ -24,6 +25,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${sl4j.version}</version>
         </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
