--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>allbs-model</artifactId>
     <name>allbs-model</name>
     <packaging>jar</packaging>
-    <version>0.1.3</version>
+    <version>0.1.5</version>
     <description>智慧环保可能会用到的模型计算</description>
     <url>www.allbs.cn</url>
 
@@ -18,6 +18,9 @@
         <lombok.version>1.18.12</lombok.version>
         <hutool.version>5.5.8</hutool.version>
         <sl4j.version>1.7.30</sl4j.version>
+        <validation.version>2.0.1.Final</validation.version>
+        <jackson.version>2.12.3</jackson.version>
+        <javax-json.version>1.0</javax-json.version>
     </properties>
 
     <dependencies>
@@ -35,6 +38,21 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>${hutool.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${validation.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.json.bind</groupId>
+            <artifactId>javax.json.bind-api</artifactId>
+            <version>${javax-json.version}</version>
         </dependency>
     </dependencies>
 
