--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <validation.version>2.0.1.Final</validation.version>
         <jackson.version>2.12.3</jackson.version>
         <javax-json.version>1.0</javax-json.version>
+        <guava.verison>31.1-jre</guava.verison>
     </properties>
 
     <dependencies>
@@ -53,6 +54,11 @@
             <groupId>javax.json.bind</groupId>
             <artifactId>javax.json.bind-api</artifactId>
             <version>${javax-json.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.verison}</version>
         </dependency>
     </dependencies>
 
